--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1437,6 +1437,12 @@ select {
   color: #8A40A7;
 }
 
+
+.responsive {
+  width: 100%;
+  height: auto;
+}
+
 @media (max-width: 575.98px) {
   .main-search-box {
     width: 100%;
