--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1523,6 +1523,20 @@ a:active {
     background-color: #ffffff;
     color: #0976b4;
   }
+ 
+  .website {
+    font-size: 24px;
+    padding-top: 8px;
+    padding-left: 1px;
+    background-color: #0976b4;
+    color: #ffffff;
+    border-color: #0976b4;
+    
+  }
+  .website :hover {
+    background-color: #ffffff;
+    color: #0976b4;
+  }
 
 @media (max-width: 575.98px) {
   .main-search-box {
