--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1538,7 +1538,7 @@ a:active {
   }
   .website :hover {
     background-color: #ffffff;
-    color: #0976b4;
+    color: #edac13;
   }
 
 @media (max-width: 575.98px) {
