--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1531,14 +1531,14 @@ a:active {
     font-size: 24px;
     padding-top: 8px;
     padding-left: 1px;
-    background-color: #0976b4;
+    background-color: #8c10eb;
     color: #ffffff;
     border-color: #0976b4;
     
   }
   .website :hover {
     background-color: #ffffff;
-    color: #edac13;
+    color: #8c10eb;
   }
 
 @media (max-width: 575.98px) {
