--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1533,7 +1533,7 @@ a:active {
     padding-left: 1px;
     background-color: #8c10eb;
     color: #ffffff;
-    border-color: #0976b4;
+    border-color: #8c10eb;
     
   }
   .website :hover {
