--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -48,7 +48,9 @@ html, body {
   position: absolute;
   top:0;
   left: 0;
-  width: 100%;
+  width: 70%;
+  margin-right: 15%;
+  margin-left:15%;
   height: 100%;
 }
 
